--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/books
+spring.datasource.username=root
+spring.datasource.password=1111
 
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
